--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,7 @@
 
 
     <string name="orders_no">订单编号</string>
+    <string name="orders_no_">订单编号:</string>
     <string name="orders_time">下单时间</string>
     
     <string name="go_pay">去支付</string>
@@ -114,6 +115,9 @@
     <string name="weixin">微信</string>
     <string name="zhifubao">支付宝</string>
     <string name="shop_pay">商场收银</string>
+    <string name="choice_pay_type">请选择支付方式:</string>
+    <string name="pay_money">支付金额:</string>
+    <string name="confirm_pay">确认支付</string>
 
 
 </resources>
