--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,5 +119,7 @@
     <string name="pay_money">支付金额:</string>
     <string name="confirm_pay">确认支付</string>
 
+    <string name="vip">uiu</string>
+
 
 </resources>
