--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -124,6 +124,8 @@
     <string name="union_pay">银联支付</string>
     <string name="mall_pay">商场收银</string>
 
+    <string name="pay_ing">支付中...</string>
+
 
 
 </resources>
