--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,6 +125,7 @@
     <string name="mall_pay">商场收银</string>
 
     <string name="pay_ing">支付中...</string>
+    <string name="pay_ing">支付中...</string>
 
 
 
